<resources>
    <string name="app_name">Driving School</string>
    <string name="vendor">AppToZee</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="error_invalid_email">This Email is invalid</string>
    <string name="error_invalid_mobile_number">This Mobile number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="forgot">Forgot Password?</string>
    <string name="email">Enter Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="title_activity_driver">Driver</string>

    <!--Drawer String -->
    <string name="registercus">Register</string>
    <string name="updatecus">Update</string>
    <string name="deletecus">Delete</string>
    <string name="applyleave">Leave</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="logout">LOGOUT</string>
    <string name="exit">Exit</string>
    <string name="ltake">Leaves taken</string>
    <string name="lleft">Leaves left</string>
    <string name="lperiod">Leave period</string>
    <string name="lreason">Leave reason</string>
    <string name="apply">Apply</string>

    <!--CUSTOMER -->
    <string name="customer_name">Customer name</string>
    <string name="hrs_left">Hours left</string>
    <string name="hrs_done">Hours done</string>
    <string name="amount">Amount paid</string>

    <!--SLOTS-->
    <string name="slot1">6 AM - 7 AM</string>
    <string name="slot2">7 AM - 8 AM</string>
    <string name="slot3">8 AM - 9 AM</string>
    <string name="slot4">9 AM - 10 AM</string>
    <string name="slot5">10 AM - 11 AM</string>
    <string name="slot6">11 AM - 12 PM</string>
    <string name="slot7">12 PM - 1 PM</string>
    <string name="slot8">1 PM - 2 PM</string>
    <string name="slot9">2 PM - 3 PM</string>
    <string name="slot10">3 PM - 4 PM</string>
    <string name="slot11">4 PM - 5 PM</string>
    <string name="slot12">5 PM - 6 PM</string>
</resources>
