<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_bg"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:id="@+id/ltaken"
        android:padding="10.0dp"
        android:gravity="center"
        android:text="@string/ltake"
        android:textColor="@android:color/holo_green_light"
        android:background="@drawable/login_fields"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lleft"
        android:padding="10.0dp"
        android:gravity="center"
        android:text="@string/lleft"
        android:textColor="@android:color/holo_green_light"
        android:background="@drawable/login_fields"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/lperiod"
        android:padding="10.0dp"
        android:gravity="center"
        android:hint="@string/lperiod"
        android:inputType="date"
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff"
        android:background="@drawable/login_fields"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/lreason"
        android:padding="10.0dp"
        android:gravity="center"
        android:hint="@string/lreason"
        android:inputType="text"
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff"
        android:background="@drawable/login_fields"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/apply"
        android:padding="10.0dp"
        android:gravity="center"
        android:text="@string/apply"
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff"
        android:background="@drawable/login_button"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>