<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto" >

    <EditText
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff"
        android:gravity="center"
        android:id="@+id/userField"
        android:background="@drawable/login_fields"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="40.0dip"
        android:hint="@string/mobile_number"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff"
        android:gravity="center"
        android:id="@+id/passField"
        android:background="@drawable/login_fields"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40.0dip"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="40.0dip"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:id="@+id/loginButton"
        android:background="@drawable/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="40.0dip"
        android:text="@string/signin" />

    <TextView
        android:id="@+id/forgotpasswordfield"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="end"
        android:text="@string/forgot"
        android:textColor="@drawable/button_forgot_password"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.daimajia.numberprogressbar.NumberProgressBar
        android:id="@+id/pbar"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="40.0dip"
        android:layout_gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        custom:progress_unreached_color="#CCCCCC"
        custom:progress_reached_color="#3498DB"
        custom:progress_unreached_bar_height="0.75dp"
        custom:progress_reached_bar_height="1.5dp"
        custom:progress_text_size="10sp"
        custom:progress_text_color="#3498DB"
        custom:progress_text_offset="1dp"
        custom:progress_text_visibility="visible"
        custom:progress_max="100"
        custom:progress_current="80" />

</LinearLayout>
